getCurrentContest update. API CHANGED
